--- a/site/_layouts/site.html
+++ b/site/_layouts/site.html
@@ -12,7 +12,7 @@
     })(window,document,'script','dataLayer','GTM-K7ZB6FL');</script>
     <!-- End Google Tag Manager -->
     <!-- Stylesheet -->
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="/static/build/css/site/main.css" />
     <!-- Crazy Egg A/B testing -->
     <script type="text/javascript" src="https://script.crazyegg.com/pages/scripts/0011/8875.js" async="async"></script>
     <script src="https://cdn.jsdelivr.net/blazy/latest/blazy.min.js"></script>
