--- a/site/_layouts/site.html
+++ b/site/_layouts/site.html
@@ -79,8 +79,8 @@
             <a href="#main-content">Jump to main content</a>
           </span>
           <ul class="p-navigation__links">
-            <li class="p-navigation__link"><a href="https://docs.vanillaframework.io">Docs</a></li>
-            <li class="p-navigation__link"><a href="https://docs.vanillaframework.io/examples">Examples</a></li>
+            <li class="p-navigation__link"><a href="/docs">Docs</a></li>
+            <li class="p-navigation__link"><a href="/docs/examples">Examples</a></li>
             <li class="p-navigation__link{% if path == '/accessibility' %} is-selected{% endif %}"><a href="/accessibility">Accessibility</a></li>
             <li class="p-navigation__link{% if path == '/browser-support' %} is-selected{% endif %}"><a href="/browser-support">Browser support</a></li>
             <li class="p-navigation__link{% if path == '/contribute' %} is-selected{% endif %}"><a href="/contribute">Contribute</a></li>
