rebase and fix broken things

--- a/scss/_patterns_navigation.scss
+++ b/scss/_patterns_navigation.scss
@@ -26,7 +26,7 @@ $navigation-hover-opacity: 0.58;
     white-space: nowrap;
 
     @media (min-width: $breakpoint-navigation-threshold) {
-      padding: $spv-inner--medium $sph-inner;
+      padding: $spv-inner--medium $sph-inner * 2 $spv-inner--medium 0;
     }
 
     &::before {
