--- a/scss/docs/_settings.scss
+++ b/scss/docs/_settings.scss
@@ -1,8 +1,6 @@
-$breakpoint-medium: 900px;
-$grid-max-width: none;
+$grid-max-width: 90rem;
 
-$content-padding: 0 5%;
-$toc-width: 12rem;
+$breakpoint-medium: 900px;
 
 // Increase paragraph max-width to accommodate iframes
 $p-max-width: 52em;
