--- a/site/_layouts/default.html
+++ b/site/_layouts/default.html
@@ -23,9 +23,9 @@
     height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
 
-    <header id="navigation" class="p-navigation">
-      <div class="p-navigation__row--full-width">
-        <div class="p-navigation__banner">
+    <header id="navigation" class="p-navigation is-dark">
+      <div class="row">
+        <div class="p-navigation__banner col-3">
           <div class="p-navigation__logo">
             <a class="p-navigation__item" href="/">
               <img class="p-navigation__image" src="https://assets.ubuntu.com/v1/d96d86b5-vanilla_black-orange_hex.svg" alt="Vanilla framework logo">
@@ -37,7 +37,7 @@
             <a class="p-sidebar__toggle u-hide--medium u-hide--large" href="#">Patterns</a>
           </div>
         </div>
-        <nav class="p-navigation__nav">
+        <nav class="p-navigation__nav col-9">
           <span class="u-off-screen">
             <a href="#main-content">Jump to main content</a>
           </span>
@@ -49,20 +49,23 @@
             <li class="p-navigation__item"><a class="p-navigation__link" href="/contribute">Contribute</a></li>
           </ul>
           <form class="p-search-box" action="/docs/search">
-            <input type="search" id="search-docs" class="p-search-box__input" name="q" {% if query %}value="{{ query }}"{% endif %} placeholder="Search the docs" title="Search the documentation" required />
-            <button type="reset" id="search-docs-reset" class="p-search-box__reset u-no-margin--right" alt="reset"><i class="p-icon--close"></i></button>
+            <input type="search" id="search-docs" class="p-search-box__input" name="q" {% if query %}value="{{ query }}"
+              {% endif %} placeholder="Search the docs" title="Search the documentation" required />
+            <button type="reset" id="search-docs-reset" class="p-search-box__reset u-no-margin--right" alt="reset"><i
+                class="p-icon--close"></i></button>
             <button type="submit" class="p-search-box__button" alt="search"><i class="p-icon--search"></i></button>
           </form>
         </nav>
       </div>
     </header>
+    {% block banner %}{% endblock %}
 
-    <div class="docs-container">
-      <hr class="u-no-margin u-hide--small">
-      <aside class="p-sidebar">
+    <div class="p-strip is-shallow">
+      <div class="row">
+      <aside class="col-3 p-sidebar">
         <div class="p-sidebar__content">
           <nav class="p-sidebar-nav">
-            <ul class="p-sidebar-nav__list" id="docs-list-unsorted">
+            <ul class="docs-list-unsorted" id="docs-list-unsorted">
               <li class="p-sidebar-nav__item">
                 <strong>Welcome</strong>
                 <ul class="p-sidebar-nav__list">
@@ -171,51 +174,21 @@
           </nav>
         </div>
       </aside>
-
-      <main class="p-content" id="main-content">
-        {% block banner %}{% endblock %}
+      <main class="p-content col-7" id="main-content">
         <div class="p-strip is-shallow">
           <div class="p-content__row">
             {% block content %}{{ content | safe }}{% endblock content %}
           </div>
         </div>
-
-        <hr>
-
-        <footer class="p-strip is-shallow" role="contentinfo">
-          <div class="p-content__row">
-            <div class="col-12">
-              &copy; {{ now("%Y") }} Canonical Ltd. Ubuntu and Canonical are registered trademarks of Canonical Ltd.
-              <nav>
-                <ul class="p-inline-list--middot">
-                  <li class="p-inline-list__item">
-                    <a href="https://github.com/canonical-web-and-design/vanilla-framework/releases/latest">Vanilla framework v{{ version }}</a>
-                  </li>
-                  <li class="p-inline-list__item">
-                    <a href="https://www.ubuntu.com/legal">Legal info</a>
-                  </li>
-                  <li class="p-inline-list__item">
-                    <a href="https://github.com/canonical-web-and-design/vanilla-framework/issues/new/choose">Report a bug with this site</a>
-                  </li>
-                </ul>
-                <span class="u-off-screen">
-                  <a href="#">Go to the top of the page</a>
-                </span>
-              </nav>
-            </div>
-          </div>
-        </footer>
       </main>
-
-      <aside id="side-content" class="u-hide--small p-aside js-contents" style="display: none">
+      <aside id="side-content" class="col-2 u-hide--small p-aside js-contents" style="display: none">
         <div class="p-aside__section">
-          <h4 class="p-aside__header">Contents</h4>
+          <h4 class="p-muted-heading">Contents</h4>
           <nav class="p-aside__nav">
             <ul class="p-list js-contents-list"></ul>
           </nav>
         </div>
       </aside>
-
       <script>
         let aside = document.querySelector('.js-contents');
         let list = aside.querySelector('.js-contents-list');
@@ -227,7 +200,7 @@
 
         // Add all H3s with IDs to the "Contents" list
         document.querySelectorAll('main h3[id]').forEach(
-          function(heading) {
+          function (heading) {
             let thisItem = item.cloneNode();
             let thisAnchor = anchor.cloneNode();
             thisAnchor.setAttribute('href', '#' + heading.id);
@@ -243,13 +216,37 @@
         }
       </script>
     </div>
-    <script src="/static/js/scripts.js"></script>
-    <script defer src="https://static.codepen.io/assets/embed/ei.js"></script>
-    <script defer src="/static/js/example.js"></script>
-    <!-- begin usabilla live embed code -->
-    <script type="text/javascript">/*{literal}<![CDATA[*/window.lightningjs||function(c){function g(b,d){d&&(d+=(/\?/.test(d)?"&":"?")+"lv=1");c[b]||function(){var i=window,h=document,j=b,g=h.location.protocol,l="load",k=0;(function(){function b(){a.P(l);a.w=1;c[j]("_load")}c[j]=function(){function m(){m.id=e;return c[j].apply(m,arguments)}var b,e=++k;b=this&&this!=i?this.id||0:0;(a.s=a.s||[]).push([e,b,arguments]);m.then=function(b,c,h){var d=a.fh[e]=a.fh[e]||[],j=a.eh[e]=a.eh[e]||[],f=a.ph[e]=a.ph[e]||[];b&&d.push(b);c&&j.push(c);h&&f.push(h);return m};return m};var a=c[j]._={};a.fh={};a.eh={};a.ph={};a.l=d?d.replace(/^\/\//,(g=="https:"?g:"http:")+"///"):d;a.p={0:+new Date};a.P=function(b){a.p[b]=new Date-a.p[0]};a.w&&b();i.addEventListener?i.addEventListener(l,b,!1):i.attachEvent("on"+l,b);var q=function(){function b(){return["<head></head><",c,' onload="var d=',n,";d.getElementsByTagName('head')[0].",d,"(d.",g,"('script')).",i,"='",a.l,"'\"></",c,">"].join("")}var c="body",e=h[c];if(!e)return setTimeout(q,100);a.P(1);var d="appendChild",g="createElement",i="src",k=h[g]("div"),l=k[d](h[g]("div")),f=h[g]("iframe"),n="document",p;k.style.display="none";e.insertBefore(k,e.firstChild).id=o+"-"+j;f.frameBorder="0";f.id=o+"-frame-"+j;/MSIE[ ]+6/.test(navigator.userAgent)&&(f[i]="javascript:false");f.allowTransparency="true";l[d](f);try{f.contentWindow[n].open()}catch(s){a.domain=h.domain,p="javascript:var d="+n+".open();d.domain='"+h.domain+"';",f[i]=p+"void(0);"}try{var r=f.contentWindow[n];r.write(b());r.close()}catch(t){f[i]=p+'d.write("'+b().replace(/"/g,String.fromCharCode(92)+'"')+'");d.close();'}a.P(2)};a.l&&setTimeout(q,0)})()}();c[b].lv="1";return c[b]}var o="lightningjs",k=window[o]=g(o);k.require=g;k.modules=c}({});
-window.usabilla_live = lightningjs.require("usabilla_live", "//w.usabilla.com/4f2e23c6debc.js");
+  </div>
+  <footer class="p-strip--light is-deep" role="contentinfo">
+    <div class="row">
+      <div class="col-start-large-4 col-9">
+        <p>
+          &copy; {{ now("%Y") }} Canonical Ltd. Ubuntu and Canonical are registered trademarks of Canonical Ltd.
+        </p>
+        <nav>
+          <ul class="p-inline-list--middot">
+            <li class="p-inline-list__item">
+              <a href="https://www.ubuntu.com/legal">Legal info</a>
+            </li>
+            <li class="p-inline-list__item">
+              <a href="https://github.com/canonical-web-and-design/vanilla-framework/issues/new/choose">Report a bug with
+                this site</a>
+            </li>
+          </ul>
+          <span class="u-off-screen">
+            <a href="#">Go to the top of the page</a>
+          </span>
+        </nav>
+      </div>
+    </div>
+  </footer>
+  <script src="/static/js/scripts.js"></script>
+  <script defer src="https://static.codepen.io/assets/embed/ei.js"></script>
+  <script defer src="/static/js/example.js"></script>
+  <!-- begin usabilla live embed code -->
+  <script type="text/javascript">/*{literal}<![CDATA[*/window.lightningjs || function (c) { function g(b, d) { d && (d += (/\?/.test(d) ? "&" : "?") + "lv=1"); c[b] || function () { var i = window, h = document, j = b, g = h.location.protocol, l = "load", k = 0; (function () { function b() { a.P(l); a.w = 1; c[j]("_load") } c[j] = function () { function m() { m.id = e; return c[j].apply(m, arguments) } var b, e = ++k; b = this && this != i ? this.id || 0 : 0; (a.s = a.s || []).push([e, b, arguments]); m.then = function (b, c, h) { var d = a.fh[e] = a.fh[e] || [], j = a.eh[e] = a.eh[e] || [], f = a.ph[e] = a.ph[e] || []; b && d.push(b); c && j.push(c); h && f.push(h); return m }; return m }; var a = c[j]._ = {}; a.fh = {}; a.eh = {}; a.ph = {}; a.l = d ? d.replace(/^\/\//, (g == "https:" ? g : "http:") + "///") : d; a.p = { 0: +new Date }; a.P = function (b) { a.p[b] = new Date - a.p[0] }; a.w && b(); i.addEventListener ? i.addEventListener(l, b, !1) : i.attachEvent("on" + l, b); var q = function () { function b() { return ["<head></head><", c, ' onload="var d=', n, ";d.getElementsByTagName('head')[0].", d, "(d.", g, "('script')).", i, "='", a.l, "'\"></", c, ">"].join("") } var c = "body", e = h[c]; if (!e) return setTimeout(q, 100); a.P(1); var d = "appendChild", g = "createElement", i = "src", k = h[g]("div"), l = k[d](h[g]("div")), f = h[g]("iframe"), n = "document", p; k.style.display = "none"; e.insertBefore(k, e.firstChild).id = o + "-" + j; f.frameBorder = "0"; f.id = o + "-frame-" + j; /MSIE[ ]+6/.test(navigator.userAgent) && (f[i] = "javascript:false"); f.allowTransparency = "true"; l[d](f); try { f.contentWindow[n].open() } catch (s) { a.domain = h.domain, p = "javascript:var d=" + n + ".open();d.domain='" + h.domain + "';", f[i] = p + "void(0);" } try { var r = f.contentWindow[n]; r.write(b()); r.close() } catch (t) { f[i] = p + 'd.write("' + b().replace(/"/g, String.fromCharCode(92) + '"') + '");d.close();' } a.P(2) }; a.l && setTimeout(q, 0) })() }(); c[b].lv = "1"; return c[b] } var o = "lightningjs", k = window[o] = g(o); k.require = g; k.modules = c }({});
+    window.usabilla_live = lightningjs.require("usabilla_live", "//w.usabilla.com/4f2e23c6debc.js");
 /*]]>{/literal}*/</script>
-<!-- end usabilla live embed code -->
-  </body>
+  <!-- end usabilla live embed code -->
+</body>
 </html>
