--- a/scss/site/main.scss
+++ b/scss/site/main.scss
@@ -17,11 +17,13 @@ $sticky-footer: true;
 @import 'patterns_grid';
 @include vfio-p-grid;
 
+$color-hero: #e95420;
+
 // Local website styles
 .vfio-hero {
-  background-image: url('https://assets.ubuntu.com/v1/775cc62b-vanilla-grad-background.png');
+  background-color: $color-hero;
+  background-image: url('#{$assets-path}775cc62b-vanilla-grad-background.png');
   background-position: 75% 50%;
-  background-color: #e95420;
 }
 
 .p-list__icon--github {
