Fix links in docs main nav

--- a/site/_layouts/default.html
+++ b/site/_layouts/default.html
@@ -27,7 +27,7 @@
       <div class="p-navigation__row--full-width">
         <div class="p-navigation__banner">
           <div class="p-navigation__logo">
-            <a class="p-navigation__item" href="https://vanillaframework.io">
+            <a class="p-navigation__item" href="/">
               <img class="p-navigation__image" src="https://assets.ubuntu.com/v1/d96d86b5-vanilla_black-orange_hex.svg" alt="Vanilla framework logo">
             </a>
           </div>
@@ -44,9 +44,9 @@
           <ul class="p-navigation__items">
             <li class="p-navigation__item {% if path.startswith('/docs') %}is-selected{% endif %}"><a class="p-navigation__link" href="/docs">Docs</a></li>
             <li class="p-navigation__item {% if '/docs/examples' in path %}is-selected{% endif %}"><a class="p-navigation__link" href="/docs/examples">Examples</a></li>
-            <li class="p-navigation__item"><a class="p-navigation__link" href="https://vanillaframework.io/accessibility">Accessibility</a></li>
-            <li class="p-navigation__item"><a class="p-navigation__link" href="https://vanillaframework.io/browser-support">Browser support</a></li>
-            <li class="p-navigation__item"><a class="p-navigation__link" href="https://vanillaframework.io/contribute">Contribute</a></li>
+            <li class="p-navigation__item"><a class="p-navigation__link" href="/accessibility">Accessibility</a></li>
+            <li class="p-navigation__item"><a class="p-navigation__link" href="/browser-support">Browser support</a></li>
+            <li class="p-navigation__item"><a class="p-navigation__link" href="/contribute">Contribute</a></li>
           </ul>
           <form class="p-search-box" action="/search">
             <input type="search" id="search-docs" class="p-search-box__input" name="q" {% if query %}value="{{ query }}"{% endif %} placeholder="Search the docs" title="Search the documentation" required />
