--- a/site/_layouts/default.html
+++ b/site/_layouts/default.html
@@ -48,7 +48,7 @@
             <li class="p-navigation__item"><a class="p-navigation__link" href="https://vanillaframework.io/browser-support">Browser support</a></li>
             <li class="p-navigation__item"><a class="p-navigation__link" href="https://vanillaframework.io/contribute">Contribute</a></li>
           </ul>
-          <form class="p-search-box" action="/search">
+          <form class="p-search-box" action="/docs/search">
             <input type="search" id="search-docs" class="p-search-box__input" name="q" {% if query %}value="{{ query }}"{% endif %} placeholder="Search the docs" title="Search the documentation" required />
             <button type="reset" id="search-docs-reset" class="p-search-box__reset u-no-margin--right" alt="reset"><i class="p-icon--close"></i></button>
             <button type="submit" class="p-search-box__button" alt="search"><i class="p-icon--search"></i></button>
