--- a/site/_layouts/default.html
+++ b/site/_layouts/default.html
@@ -42,7 +42,7 @@
             <a href="#main-content">Jump to main content</a>
           </span>
           <ul class="p-navigation__items">
-            <li class="p-navigation__item {% if path.startswith('/docs') %}is-selected{% endif %}"><a class="p-navigation__link" href="/docs">Docs</a></li>
+            <li class="p-navigation__item {% if path.startswith('/docs') and path != '/docs/examples' %}is-selected{% endif %}"><a class="p-navigation__link" href="/docs">Docs</a></li>
             <li class="p-navigation__item {% if '/docs/examples' in path %}is-selected{% endif %}"><a class="p-navigation__link" href="/docs/examples">Examples</a></li>
             <li class="p-navigation__item"><a class="p-navigation__link" href="/accessibility">Accessibility</a></li>
             <li class="p-navigation__item"><a class="p-navigation__link" href="/browser-support">Browser support</a></li>
