--- a/scss/site/main.scss
+++ b/scss/site/main.scss
@@ -6,7 +6,7 @@
 $sticky-footer: true;
 
 // import vanilla
-@import '../build';
+@import '../docs/styles';
 
 @import 'patterns_syntax-highlight';
 @include vfio-p-syntax-highlight;
