--- a/site/_layouts/site.html
+++ b/site/_layouts/site.html
@@ -13,6 +13,8 @@
     <!-- End Google Tag Manager -->
     <!-- Stylesheet -->
     <link rel="stylesheet" href="/static/build/css/site/main.css" />
+    <!-- <link rel="stylesheet" href="/static/build/css/docs/styles.css" /> -->
+
     <!-- Crazy Egg A/B testing -->
     <script type="text/javascript" src="https://script.crazyegg.com/pages/scripts/0011/8875.js" async="async"></script>
     <script src="https://cdn.jsdelivr.net/blazy/latest/blazy.min.js"></script>
@@ -49,63 +51,11 @@
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-K7ZB6FL"
     height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
-    <header id="navigation" class="p-navigation">
-      <div class="p-navigation__row">
-        <div class="p-navigation__banner">
-          <div class="p-navigation__logo" style="margin-bottom: 0">
-            <a class="p-navigation__link" href="/">
-              <img
-              class="b-lazy p-navigation__image"
-              src=data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==
-              data-src="https://assets.ubuntu.com/v1/d96d86b5-vanilla_black-orange_hex.svg"
-              alt="Vanilla">
-            </a>
-          </div>
-          <a href="#navigation" class="p-navigation__toggle--open" title="menu">Menu</a>
-          <a href="#navigation-closed" class="p-navigation__toggle--close" title="close menu">Close menu</a>
-        </div>
-        <nav class="p-navigation__nav">
-          <span class="u-off-screen">
-            <a href="#main-content">Jump to main content</a>
-          </span>
-          <ul class="p-navigation__links">
-            <li class="p-navigation__link"><a href="/docs">Docs</a></li>
-            <li class="p-navigation__link"><a href="/docs/examples">Examples</a></li>
-            <li class="p-navigation__link{% if path == '/accessibility' %} is-selected{% endif %}"><a href="/accessibility">Accessibility</a></li>
-            <li class="p-navigation__link{% if path == '/browser-support' %} is-selected{% endif %}"><a href="/browser-support">Browser support</a></li>
-            <li class="p-navigation__link{% if path == '/contribute' %} is-selected{% endif %}"><a href="/contribute">Contribute</a></li>
-            <li class="p-navigation__link{% if path == '/showcase' %} is-selected{% endif %}"><a href="/showcase">Showcase</a></li>
-          </ul>
-        </nav>
-      </div>
-    </header>
+    {% include '_layouts/_header.html' %}
 
     {% block content %}{{ content | safe }}{% endblock content %}
 
-    <hr>
-    <footer class="p-strip is-shallow">
-      <div class="row">
-        <div class="col-12">
-          &copy; {{ now("%Y") }} Canonical Ltd. Ubuntu and Canonical are registered trademarks of Canonical Ltd.
-          <nav>
-            <ul class="p-inline-list--middot">
-              <li class="p-inline-list__item">
-                <a href="https://www.ubuntu.com/legal">Legal info</a>
-              </li>
-              <li class="p-inline-list__item">
-                <a href="https://github.com/canonical-web-and-design/vanillaframework.io/issues/new">Report a bug with this site</a>
-              </li>
-              <li class="p-inline-list__item">
-                <a href="https://github.com/canonical-web-and-design/vanilla-framework/issues/new/choose">Report a bug with Vanilla framework</a>
-              </li>
-            </ul>
-            <span class="u-off-screen">
-              <a href="#">Go to the top of the page</a>
-            </span>
-          </nav>
-        </div>
-      </div>
-    </footer>
+    {% include '_layouts/_footer.html' %}
 
     <!-- begin usabilla live embed code -->
     <script type="text/javascript">/*{literal}<![CDATA[*/window.lightningjs||function(c){function g(b,d){d&&(d+=(/\?/.test(d)?"&":"?")+"lv=1");c[b]||function(){var i=window,h=document,j=b,g=h.location.protocol,l="load",k=0;(function(){function b(){a.P(l);a.w=1;c[j]("_load")}c[j]=function(){function m(){m.id=e;return c[j].apply(m,arguments)}var b,e=++k;b=this&&this!=i?this.id||0:0;(a.s=a.s||[]).push([e,b,arguments]);m.then=function(b,c,h){var d=a.fh[e]=a.fh[e]||[],j=a.eh[e]=a.eh[e]||[],f=a.ph[e]=a.ph[e]||[];b&&d.push(b);c&&j.push(c);h&&f.push(h);return m};return m};var a=c[j]._={};a.fh={};a.eh={};a.ph={};a.l=d?d.replace(/^\/\//,(g=="https:"?g:"http:")+"//"):d;a.p={0:+new Date};a.P=function(b){a.p[b]=new Date-a.p[0]};a.w&&b();i.addEventListener?i.addEventListener(l,b,!1):i.attachEvent("on"+l,b);var q=function(){function b(){return["<head></head><",c,' onload="var d=',n,";d.getElementsByTagName('head')[0].",d,"(d.",g,"('script')).",i,"='",a.l,"'\"></",c,">"].join("")}var c="body",e=h[c];if(!e)return setTimeout(q,100);a.P(1);var d="appendChild",g="createElement",i="src",k=h[g]("div"),l=k[d](h[g]("div")),f=h[g]("iframe"),n="document",p;k.style.display="none";e.insertBefore(k,e.firstChild).id=o+"-"+j;f.frameBorder="0";f.id=o+"-frame-"+j;/MSIE[ ]+6/.test(navigator.userAgent)&&(f[i]="javascript:false");f.allowTransparency="true";l[d](f);try{f.contentWindow[n].open()}catch(s){a.domain=h.domain,p="javascript:var d="+n+".open();d.domain='"+h.domain+"';",f[i]=p+"void(0);"}try{var r=f.contentWindow[n];r.write(b());r.close()}catch(t){f[i]=p+'d.write("'+b().replace(/"/g,String.fromCharCode(92)+'"')+'");d.close();'}a.P(2)};a.l&&setTimeout(q,0)})()}();c[b].lv="1";return c[b]}var o="lightningjs",k=window[o]=g(o);k.require=g;k.modules=c}({});
