remove unavailable var

--- a/scss/docs/styles.scss
+++ b/scss/docs/styles.scss
@@ -8,7 +8,7 @@
 
 /* Vanilla overrides */
 p {
-  max-width: $p-max-width;
+  max-width: map-get($max-widths, default);
 
   > iframe {
     margin-top: $spv-outer--medium;
