--- a/site/_layouts/_header.html
+++ b/site/_layouts/_header.html
@@ -3,7 +3,7 @@
     <div class="p-navigation__banner col-3">
       <div class="p-navigation__logo">
         <a class="p-navigation__item" href="/">
-          <img class="p-navigation__image" src="https://assets.ubuntu.com/v1/94d962aa-vanilla_white-orange_hex.svg" alt="Vanilla framework logo">
+          <img class="p-navigation__image" style="height: 1.5rem" src="https://assets.ubuntu.com/v1/94d962aa-vanilla_white-orange_hex.svg" alt="Vanilla framework logo">
         </a>
       </div>
       <div class="p-navigation__toggles u-hide--large u-hide--medium">
