Remove unnecessary settings

--- a/scss/site/main.scss
+++ b/scss/site/main.scss
@@ -1,7 +1,7 @@
 @charset 'utf-8';
 
-// import settings
-@import 'settings_breakpoints';
+// settings
+$breakpoint-navigation-threshold: 900px;
 
 // import vanilla
 @import '../build';
@@ -11,9 +11,6 @@
 
 @import 'patterns_icons';
 @include vfio-p-icons;
-
-@import 'patterns_grid';
-@include vfio-p-grid;
 
 $color-hero: #e95420;
 
