--- a/site/_layouts/site.html
+++ b/site/_layouts/site.html
@@ -15,11 +15,7 @@
         <div class="p-navigation__banner">
           <div class="p-navigation__logo" style="margin-bottom: 0">
             <a class="p-navigation__link" href="/">
-              <img
-              class="b-lazy p-navigation__image"
-              src=data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==
-              data-src="https://assets.ubuntu.com/v1/d96d86b5-vanilla_black-orange_hex.svg"
-              alt="Vanilla">
+              <img class="p-navigation__image" src="https://assets.ubuntu.com/v1/d96d86b5-vanilla_black-orange_hex.svg" alt="Vanilla">
             </a>
           </div>
           <a href="#navigation" class="p-navigation__toggle--open" title="menu">Menu</a>
