--- a/scss/_vanilla.scss
+++ b/scss/_vanilla.scss
@@ -33,6 +33,7 @@
 @import 'patterns_pagination';
 @import 'patterns_pull-quotes';
 @import 'patterns_search-box';
+@import 'patterns_side-navigation';
 @import 'patterns_slider';
 @import 'patterns_strip';
 @import 'patterns_switch';
@@ -102,6 +103,7 @@
   @include vf-p-pagination;
   @include vf-p-pull-quotes;
   @include vf-p-search-box;
+  @include vf-p-side-navigation;
   @include vf-p-slider;
   @include vf-p-strip;
   @include vf-p-switch;
