--- a/scss/_patterns_side-navigation.scss
+++ b/scss/_patterns_side-navigation.scss
@@ -1,7 +1,7 @@
 @import 'settings';
 
 // TODO:
-// - [ ] remove px values for variables
+// - [x] remove px values for variables
 // - [ ] duplicated stuff in placeholders
 // - [x] define colors at the beginning
 
@@ -23,9 +23,7 @@
   }
 
   .p-side-navigation__list {
-    list-style: none;
-    margin: 0;
-    padding: 0;
+    @extend %vf-list;
   }
 
   .p-side-navigation__item,
@@ -34,7 +32,7 @@
   }
 
   .p-side-navigation__item--title {
-    font-weight: 400;
+    font-weight: $font-weight-bold;
   }
 
   .p-side-navigation__text,
@@ -46,9 +44,8 @@
   .p-side-navigation__link,
   .p-side-navigation__link:link,
   .p-side-navigation__link:visited {
+    @include vf-focus;
     color: $color-sidenav-text-default;
-    display: block;
-    position: relative;
   }
 
   .p-side-navigation__link.is-active {
@@ -56,7 +53,12 @@
 
     background: $color-sidenav-item-background-highlight;
     color: $color-sidenav-text-active;
-    font-weight: 400;
+    font-weight: $font-weight-bold;
+  }
+
+  .p-side-navigation__link.is-selected {
+    color: $color-sidenav-text-active;
+    font-weight: $font-weight-bold;
   }
 
   .p-side-navigation__link:hover {
@@ -65,20 +67,14 @@
     text-decoration: none;
   }
 
-  .p-side-navigation__group {
+  .p-side-navigation__group:not(:last-child) {
     @extend %vf-pseudo-border--bottom;
-
-    padding-bottom: 0.875 * 1rem; // FIXME: 14px;
-    position: relative;
 
     &::after {
       background: $color-sidenav-group-border;
+      bottom: -0.5 * $spv-outer--scaleable; // place border in the middle of the margin
       left: $sph-inner;
     }
-  }
-
-  .p-side-navigation__group + .p-side-navigation__group {
-    padding-top: 0.625 * 1rem; // FIMXME: 10px;
   }
 
   // nested
