Make footer consistent between site and docs layouts

--- a/templates/_layouts/docs.html
+++ b/templates/_layouts/docs.html
@@ -164,29 +164,7 @@
 
         <hr>
 
-        <footer class="p-strip is-shallow" role="contentinfo">
-          <div class="p-content__row">
-            <div class="col-12">
-              &copy; {{ now("%Y") }} Canonical Ltd. Ubuntu and Canonical are registered trademarks of Canonical Ltd.
-              <nav>
-                <ul class="p-inline-list--middot">
-                  <li class="p-inline-list__item">
-                    <a href="https://github.com/canonical-web-and-design/vanilla-framework/releases/latest">Vanilla framework v{{ version }}</a>
-                  </li>
-                  <li class="p-inline-list__item">
-                    <a href="https://www.ubuntu.com/legal">Legal info</a>
-                  </li>
-                  <li class="p-inline-list__item">
-                    <a href="https://github.com/canonical-web-and-design/vanilla-framework/issues/new/choose">Report a bug with this site</a>
-                  </li>
-                </ul>
-                <span class="u-off-screen">
-                  <a href="#">Go to the top of the page</a>
-                </span>
-              </nav>
-            </div>
-          </div>
-        </footer>
+        {% include "_layouts/_footer.html" %}
       </main>
 
       <aside id="side-content" class="u-hide--small p-aside js-contents" style="display: none">
