Make reporting bug more generic to cover site and framework

--- a/templates/_layouts/_footer.html
+++ b/templates/_layouts/_footer.html
@@ -11,7 +11,7 @@
             <a class="p-link--external" href="https://www.ubuntu.com/legal">Legal info</a>
           </li>
           <li class="p-inline-list__item">
-            <a class="p-link--external" href="https://github.com/canonical-web-and-design/vanilla-framework/issues/new/choose">Report a bug with this site</a>
+            <a class="p-link--external" href="https://github.com/canonical-web-and-design/vanilla-framework/issues/new/choose">Report a bug</a>
           </li>
         </ul>
         <span class="u-off-screen">
