Hide highlight border on focus

--- a/scss/_patterns_side-navigation.scss
+++ b/scss/_patterns_side-navigation.scss
@@ -41,6 +41,12 @@
   .p-side-navigation__link {
     @include vf-focus;
 
+    // vf-highlight-bar is rendered above focus outline
+    // so we need to hide it on focus
+    &:focus::before {
+      display: none;
+    }
+
     &:hover {
       text-decoration: none;
     }
