Remove theme mixins default colors for better clarity

--- a/scss/_base_forms-tick-elements.scss
+++ b/scss/_base_forms-tick-elements.scss
@@ -471,12 +471,12 @@ $box-offsets-top: (
 
 // theme for common properties on radios and checkboxes
 @mixin vf-tick-elements-theme(
-  // color of tick element label text
-    $color-tick-text: $colors--light-theme--text-default,
-  // color of tick element background
-    $color-tick-background: $colors--light-theme--background,
-  // color of tick element border
-    $color-tick-border: $colors--light-theme--border-high-contrast
+  // color of the tick element label text
+    $color-tick-text,
+  // color of the tick element background
+    $color-tick-background,
+  // color of the tick element border
+    $color-tick-border
 ) {
   & + label {
     color: $color-tick-text;
@@ -490,14 +490,14 @@ $box-offsets-top: (
 
 // theme for checkbox (including common properties)
 @mixin vf-checkbox-theme(
-  // color of tick element label text
-    $color-tick-text: $colors--light-theme--text-default,
-  // color of tick element background
-    $color-tick-background: $colors--light-theme--background,
-  // color of tick element border
-    $color-tick-border: $colors--light-theme--border-high-contrast,
+  // color of the tick element label text
+    $color-tick-text,
+  // color of the tick element background
+    $color-tick-background,
+  // color of the tick element border
+    $color-tick-border,
   // color of the checkbox tick
-    $color-checkbox-tick: $colors--light-theme--background
+    $color-checkbox-tick
 ) {
   @include vf-tick-elements-theme($color-tick-text, $color-tick-background, $color-tick-border);
 
@@ -528,14 +528,14 @@ $box-offsets-top: (
 
 // theme for radio (including common properties)
 @mixin vf-radio-theme(
-  // color of tick element label text
-    $color-tick-text: $colors--light-theme--text-default,
-  // color of tick element background
-    $color-tick-background: $colors--light-theme--background,
-  // color of tick element border
-    $color-tick-border: $colors--light-theme--border-high-contrast,
+  // color of the tick element label text
+    $color-tick-text,
+  // color of the tick element background
+    $color-tick-background,
+  // color of the tick element border
+    $color-tick-border,
   // color of the radio dot
-    $color-radio-dot: $colors--light-theme--background
+    $color-radio-dot
 ) {
   @include vf-tick-elements-theme($color-tick-text, $color-tick-background, $color-tick-border);
 
