--- a/scss/_base_hr.scss
+++ b/scss/_base_hr.scss
@@ -39,7 +39,7 @@
 
 @mixin vf-hr-theme(
   // color of the horizontal rule line
-    $color-hr-line: $colors--light-theme--border-default
+    $color-hr-line
 ) {
   background: $color-hr-line;
 }
