--- a/templates/docs/examples/patterns/contextual-menu/dark.html
+++ b/templates/docs/examples/patterns/contextual-menu/dark.html
@@ -21,8 +21,8 @@
 </span>
 
 <p>Lorem ipsum dolor sit amet consectetur adipiscing elit <span class="p-contextual-menu--left is-dark">
-    <a href="#" class="p-contextual-menu__toggle" aria-controls="menu-4" aria-expanded="false" aria-haspopup="true">take action left</a>
-    <span class="p-contextual-menu__dropdown" id="menu-4" aria-hidden="true" aria-label="submenu">
+    <a href="#" class="p-contextual-menu__toggle" aria-controls="menu-4" aria-expanded="true" aria-haspopup="true">take action left</a>
+    <span class="p-contextual-menu__dropdown" id="menu-4" aria-hidden="false" aria-label="submenu">
         <span class="p-contextual-menu__group">
           <a href="#" class="p-contextual-menu__link">Commission</a>
           <a href="#" class="p-contextual-menu__link">Aquire</a>
