--- a/templates/docs/examples/patterns/navigation/subnav.html
+++ b/templates/docs/examples/patterns/navigation/subnav.html
@@ -54,9 +54,9 @@
             </li>
           </ul>
         </li>
-        <li class="p-navigation__item p-subnav" role="menuitem" id="link-3">
+        <li class="p-navigation__item p-subnav is-active" role="menuitem" id="link-3">
           <a href="#link-3-menu" aria-controls="link-3-menu" class="p-subnav__toggle p-navigation__link">LXCFS</a>
-          <ul class="p-subnav__items" id="link-3-menu" aria-hidden="true">
+          <ul class="p-subnav__items" id="link-3-menu" aria-hidden="false">
             <li>
               <a href="#" class="p-subnav__item">Introduction</a>
             </li>
